--- a/index.html
+++ b/index.html
@@ -205,12 +205,12 @@ footer {
   <section id="experience">
     <h2 class="section-title">Experience</h2>
     <ul class="timeline">
-      <li><strong>Cisomate</strong> — Aug 2024 to Present</li>
-      <li><strong>Siemplify (Now part of Google Cloud)</strong> — March 2024 to Aug 2024</li>
-      <li><strong>Swatchbook</strong> — Dec 2023 to March 2024</li>
-      <li><strong>Clubforce</strong> — Dec 2022 to Dec 2023</li>
-      <li><strong>HR Tool</strong> — May 2022 to Dec 2022</li>
-      <li><strong>Jucari</strong> — Dec 2021 to May 2022</li>
+      <li><strong>Cisomate</strong> — Aug 2024 to Present (Fifth-LLC)</li>
+      <li><strong>Siemplify (Now part of Google Cloud)</strong> — March 2024 to Aug 2024 (Fifth-LLC)</li>
+      <li><strong>Swatchbook</strong> — Dec 2023 to March 2024 (Fifth-LLC)</li>
+      <li><strong>Clubforce</strong> — Dec 2022 to Dec 2023 (Fifth-LLC)</li>
+      <li><strong>HR Tool</strong> — May 2022 to Dec 2022 (Fifth-LLC)</li>
+      <li><strong>Jucari</strong> — Dec 2021 to May 2022 (Fifth-LLC)</li>
     </ul>
   </section>
 
