--- a/index.html
+++ b/index.html
@@ -307,6 +307,7 @@ footer {
   <footer>
     <p>&copy; 2024 Sedrak Mkrtchyan</p>
     <p><a href="https://www.linkedin.com/in/sedrak1/">Linkedin</a></p>
+    <p><a href="https://t.me/sedrak_mk/">Telegram</a></p>
   </footer>
 </body>
 </html>
