--- a/index.html
+++ b/index.html
@@ -305,9 +305,9 @@ footer {
   </section>
 
   <footer>
-    <p>&copy; 2024 Sedrak Mkrtchyan</p>
-    <p><a href="https://www.linkedin.com/in/sedrak1/">Linkedin</a></p>
-    <p><a href="https://t.me/sedrak_mk/">Telegram</a></p>
+    <p>&copy; 2025 Sedrak Mkrtchyan</p>
+    <p><a target="_blank" href="https://www.linkedin.com/in/sedrak1/">Linkedin</a></p>
+    <p><a target="_blank" href="https://t.me/sedrak_mk/">Telegram</a></p>
   </footer>
 </body>
 </html>
